--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "moment": "^2.25.3",
     "mongoose": "^5.9.14",
     "multer": "^1.4.2",
-    "session": "^0.1.0"
+    "path": "^0.12.7",
+    "session": "^0.1.0",
+    "toastr": "^2.1.4"
   }
 }
