--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "nodemon": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,9 @@
     "moment": "^2.25.3",
     "mongoose": "^5.9.14",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "path": "^0.12.7",
     "session": "^0.1.0",
     "toastr": "^2.1.4"
